--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -43,7 +43,7 @@
 
             <div class="mastfoot">
                 <div class="inner">
-                    <p>This project was posted to <a href="https://github.com/MapleXiao2/videoProcessing">Github</a>
+                    <p>This project has been published to <a href="https://github.com/MapleXiao2/videoProcessing">Github</a>
 <!--                        , by <a href="https://twitter.com/mdo">@mdo</a>.</p>-->
                 </div>
             </div>
